# unique_resource

./: .gitignore  Makefile.am  Makefile.common  README.md  configure.ac
examples/: Makefile.am  usage.cc  wrapper.cc  wrapper.cpp
include/: Makefile.am  uncaught_exceptions  unique_resource  unique_resource.hh  unique_resource.hpp
include/detail/: box.hpp  guard.hpp
m4/: ac_config_cxx_warnings.m4  boost.m4
tests/: Makefile.am  legacy.cc  unique_resource.cpp
